--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
 		<link href="./main.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<h1>Help me choose between...</h1><div>
-			<div>
+		<h1>Help me choose between...</h1><div class="inputSection">
+			<div class="inputs">
 				<input placeholder="Something">
 			</div>
-			<button>Add</button>
+			<button class="addOption">Add</button>
 		</div>
 		<button>Go</button>
-		<div>
-			<img src="food_background.jpg" alt="Food" height="290" width="435">
-		</div>
 	</body>
 </html>
