Added javascript for input and button

--- a/index.html
+++ b/index.html
@@ -6,12 +6,38 @@
 		<link href="./main.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<h1>Help me choose between...</h1><div class="inputSection">
+		<div class="helpMeChoose"> 
+		<h1>Help me choose between...</h1>
+		</div>
+		<div class="inputSection">
 			<div class="inputs">
 				<input placeholder="Something">
 			</div>
 			<button class="addOption">Add</button>
 		</div>
+		<div class="resultSection"></div>
 		<button>Go</button>
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script> 
+			$(function() {
+				$('.resultSection').hide()
+
+				var add_option = function() {
+				$('.inputs').append('<input></input>')	
+			}
+
+			$('.addOption').click(add_option)
+			
+
+			$(".helpMeChoose").click(function(){ 
+					$(this).css("background-color", "white")
+		
+			} );
+			$()
+
+		})
+
+		</script>
 	</body>
 </html>
